tests/cases/vectors/errors/vector-reserve-static-negative.ari
fn main() -> i64 {
  var values: Vec[i64] = [];
  values.reserve(1 - 2);
  return 0;
}
